k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP # משנים מ-NodePort ל-ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001 # מוודא שה-Frontend וה-Ingress פונים לפורט 80 והוא מעביר ל-3001
