k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-translator-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # חשוב מאוד לניתוב תקין
spec:
  ingressClassName: nginx
  rules:
  - host: translator.local
    http:
      paths:
      - path: /api(/|$)(.*) # ניתוב ל-Backend
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /()(.*) # ניתוב ל-Frontend
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
